# pump2.0

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml
apps/api/: deps.py  main.py
apps/api/routes/: dashboard.py  scans.py  tickers.py
apps/api/static/: dashboard.css
apps/api/templates/: common_patterns.html  dashboard.html  ticker_detail.html
apps/worker/: main.py  scheduler.py
infra/docker/: docker-compose.yml
infra/railway/: README.md
tests/: test_health.py
