[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "historical-pump-scanner"
version = "0.1.0"
description = "Railway-ready research platform for historical pump pattern scanning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "numpy>=2.2.6",
  "pandas>=2.3.2",
  "psycopg[binary]>=3.2.9",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.43",
  "tenacity>=9.1.2",
  "uvicorn[standard]>=0.35.0",
  "yfinance>=0.2.65",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.12",
]

[tool.setuptools]
include-package-data = true
packages = [
  "apps",
  "apps.api",
  "apps.api.routes",
  "apps.worker",
  "packages",
  "packages.core",
  "packages.core.backtesting",
  "packages.core.data_providers",
  "packages.core.event_detection",
  "packages.core.feature_engine",
  "packages.core.similarity",
  "packages.db",
  "packages.db.models",
  "packages.schemas",
  "packages.services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
